# transport-victoria-analysis

./: .gitignore  CLAUDE.md  COMMANDS.md  README.md  main.py  pyproject.toml
dashboard/: README.md  app.py  railway.json  requirements.txt
dashboard/.streamlit/: config.toml
dashboard/data/: fct_service_performance.parquet
docs/: DESIGN_DECISIONS.md  GOLD_PLAN.md
infra/: budget.bicep  main.bicep
ingestion/: function_app.py  requirements.txt
transport_victoria_databricks/: README.md  databricks.yml  pyproject.toml
transport_victoria_databricks/resources/: bronze_vline_trip_updates.job.yml  bronze_vline_vehicle_positions.job.yml  gold_service_performance.job.yml  sample_job.job.yml  silver_schedule_dims.job.yml  silver_stops.job.yml  silver_trip_updates.job.yml  silver_vehicle_positions.job.yml  stops_pipeline.job.yml  transport_victoria_databricks_etl.pipeline.yml  weekly_schedule_download.job.yml
transport_victoria_databricks/src/: sample_notebook.ipynb
transport_victoria_databricks/src/transport_victoria_databricks/: main.py
transport_victoria_databricks/src/transport_victoria_databricks_etl/: README.md
transport_victoria_databricks/src/transport_victoria_databricks_etl/00_explorations/: 01_bronze_exploration.ipynb  01_bronze_stops_exploration.ipynb  02_silber_exploration.ipynb  payload.json  sample_exploration.ipynb
transport_victoria_databricks/src/transport_victoria_databricks_etl/00_extractions/: 00_weekly_schedule_download.ipynb  01_extract_schedule_zip.ipynb
transport_victoria_databricks/tests/: sample_taxis_test.py
(+13 files in other folders)
